# agentic-chatbot

./: .env_sample.txt  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  GETTING_STARTED.md  Makefile  README.md  TEMPLATE_GUIDE.md  pyproject.toml
.azuredevops/: qa_pipeline.yaml
.claude/commands/: monorepo-add-lib.md  monorepo-admin.md  monorepo-create.md  monorepo-intro.md
.devcontainer/core/: Dockerfile  devcontainer.json
.github/prompts/: README.md  agentic-chatbot-agent-project.prompt.md  agentic-chatbot-agent-prompt.prompt.md  agentic-chatbot-agent-tools.prompt.md  agentic-chatbot-intro.prompt.md  monorepo-add-library.prompt.md  monorepo-admin.prompt.md  monorepo-create-subproject.prompt.md  monorepo-intro.prompt.md
core/: conversation_service.py  streamlit_app.py
core/agents/: abstract_agent.py  llama_index_agent.py  semantic_kernel_agent.py
core/common/: __init__.py
core/examples/: math_app.py  math_llama_index_agent.py  math_semantic_kernel_agent.py  math_tools.py  run_app.sh
core/fastapi/: README.md
core/persistence/: __init__.py  cosmosdb_persistence_strategy.py  in_memory_persistence_strategy.py  json_file_persistence_strategy.py
core/scaffolding/: create_agent_project.sh  save_prompt.sh
core/scaffolding/templates/: __init__.py.tpl  agent_app.py.tpl  agent_llama_index.py.tpl  agent_prompt_example.txt  agent_semantic_kernel.py.tpl  agent_tools.py.tpl  run_app.sh.tpl  tool_function.tpl
core/tools/: __init__.py
core/trace/: logging_config.py  otel_configurator.py
scripts/: add_library.sh  create_python_subproject.sh
scripts/python_templates/: Dockerfile.tpl  devcontainer.json.tpl  hello_world.py.tpl  test_sample.py
